--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/douglas-franca.github.io/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Douglas Suptitz Franca</title>
-  <script type="module" crossorigin src="/douglas-franca.github.io/assets/index.9151a256.js"></script>
-  <link rel="stylesheet" href="/douglas-franca.github.io/assets/index.bc221f44.css">
+  <script type="module" crossorigin src="/assets/index.4bbd25e2.js"></script>
+  <link rel="stylesheet" href="/assets/index.5b5ea2f5.css">
 </head>
 
 <body>
