--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover" />
+    
     <title>Douglas Suptitz Franca</title>
-  <script type="module" crossorigin src="/assets/index.aa646f32.js"></script>
-  <link rel="stylesheet" href="/assets/index.7f9dbb64.css">
+  <script type="module" crossorigin src="/assets/index.b1aca368.js"></script>
+  <link rel="stylesheet" href="/assets/index.ed4a1579.css">
 </head>
 
 <body>
