--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover" />
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Douglas Suptitz Franca</title>
-  <script type="module" crossorigin src="/assets/index.b1aca368.js"></script>
-  <link rel="stylesheet" href="/assets/index.ed4a1579.css">
+  <script type="module" crossorigin src="/assets/index.f5b48d4e.js"></script>
+  <link rel="stylesheet" href="/assets/index.1e59b14e.css">
 </head>
 
 <body>
